--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </label>
     <label>
     <p>Is this your first time playing a tabletop RPG?</p>
-    <select class="select-menu">
+    <select name="first-tabletop-select" class="select-menu">
         <option name="blank" value="blank" selected></option>
         <option name="Yes" value="Yes">Yes</option>
         <option name="No" value="No">No</option>
@@ -38,11 +38,11 @@
     <label>
     <p>Ideally, how many sessions per month do you want to play?</p>
     <div class="slider-results-div">2</div>
-    <input type="range" min="1" max="4" value="2" class="slider"></input>
+    <input name="monthly-session-count" type="range" min="1" max="4" value="2" class="slider"></input>
   </label>
     <label>
     <p>What day of the week works best for you?</p>
-    <select class="select-menu">
+    <select name="day-select" class="select-menu">
         <option name="2-blank" value="blank" selected></option>
         <option value="Monday">Monday</option>
         <option value="Tuesday">Tuesday</option>
@@ -55,7 +55,7 @@
   </label>
       <label>
     <p>On that day, would you prefer the evening or late night?</p>
-    <select class="select-menu">
+    <select name="time-select" class="select-menu">
         <option name="3-blank" value="blank" selected></option>
         <option value="Evening">Evening (5pm-10pm)</option>
         <option value="Night">Night (10pm+)</option>
